implements createClient route
